[workspace]
resolver = "2"
members = [
    "crates/ocpp-1-6",
    "crates/ocpp-2-0-1",
    "crates/ocpp-2-1",
    "crates/charge-mgt-common",
    "crates/charge-mgt-cloud",
    "crates/charge-mgt-gateway",
    "crates/charge-mgt-simulator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Your Name <your@email.com>"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.4"
uuid = { version = "=1.6.1", features = ["v4"] }
getrandom = "0.2"
rand = "0.8"