[package]
name = "charge_mgt_gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

tokio-tungstenite = "0.21"
futures-util = "0.3"

reqwest = { version = "0.11", features = ["json"] }
config = "0.14"

ocpp_1_6 = { path = "../ocpp-1-6" }
ocpp_2_0_1 = { path = "../ocpp-2-0-1" }
ocpp_2_1 = { path = "../ocpp-2-1" }
charge_mgt_common = { path = "../charge-mgt-common" }

[dev-dependencies]
tokio = { workspace = true }