[package]
name = "charge_mgt_simulator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

ocpp_1_6 = { path = "../ocpp-1-6" }
charge_mgt_common = { path = "../charge-mgt-common" }

[dev-dependencies]
tokio = { workspace = true }