[package]
name = "ocpp_1_6"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json.workspace = true
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]